---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
proto-activate() {
  proto-activate_output=$(proto activate ash --config-mode upwards-global --no-bin --no-shim --export)
  if [ -n "$proto-activate_output" ]; then
    eval "$proto-activate_output"
  fi
  unset proto-activate_output
}

proto-deactivate() {
  proto-deactivate_output=$(proto deactivate ash --export)
  if [ -n "$proto-deactivate_output" ]; then
    eval "$proto-deactivate_output"
  fi
  unset proto-deactivate_output
  unset -f cd proto-activate proto-deactivate
}

cd() {
  command cd "$@" || return $?
  proto-activate
  return 0
}

proto-activate
